Colorized ratings cells accordingly. Fixed tooltip width and text clipping. Step 3 and step 4 now retains cards placement when going back and forth. Small fix to color palette.

--- a/stylesheets/dnd.css
+++ b/stylesheets/dnd.css
@@ -65,19 +65,29 @@ cardRatingJustitication  {
     padding-left: 20px;
 }
 
+/*Fix li clip*/
+tip-cont>.ng-scope>.ng-binding {
+    width: 94px;
+    height: 32px;
+    text-overflow: ellipsis !important;
+    overflow: hidden !important;
+}
+
 .ratings ul[dnd-list] .dndDraggingSource {
     display: none;
 }
 
 .ratings ul[dnd-list] .dndPlaceholder {
     background-color: #ddd;
-    display: block;
+    display: inline-block;
     min-height: 42px;
 }
 
+
 .ratings ul[dnd-list] li {
-    background-color: #fff;
+    background-color: rgba(255,255,255,0.7);
     border: 1px solid #ddd;
+    border-color: #555;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
     display: inline-block;
@@ -121,6 +131,7 @@ cardRatingJustitication  {
 .simpleDemo ul[dnd-list] li {
     background-color: rgba(255,255,255,0.7);
     border: 1px solid #ddd;
+    border-color: #555;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
     display: block;
@@ -136,6 +147,81 @@ cardRatingJustitication  {
     color: #3c763d;
 }
 
+/*Styles for -3 to 0 ratings*/
+#td-n3>.panel-heading {
+    background-image: linear-gradient(to bottom, #FF4242 0, #E82A2A 100%)!important;
+    border-color: #E82A2A !important;
+}
+
+#td-n3 {
+    background-color: #FF4242;
+    border-color: #E82A2A;
+}
+
+#td-n2>.panel-heading {
+    background-image: linear-gradient(to bottom,  #FF7171 0, #E82A2A 100%)!important;
+    border-color: #E82A2A !important;
+}
+
+#td-n2 {
+    background-color: #FF8989;
+    border-color: #E82A2A;
+}
+
+#td-n1>.panel-heading {
+    background-image: linear-gradient(to bottom,  #FF8989 0, #E82A2A 100%)!important;
+    border-color: #E82A2A !important;
+}
+
+#td-n1 {
+    background-color: #FFB8B8;
+    border-color: #E82A2A;
+}
+
+/*Styles for 1 to 3 ratings*/
+
+#td-p3>.panel-heading {
+    background-image: linear-gradient(to bottom, #30A835 0, #06960D 100%) !important;
+    border-color: #06A10E !important;
+}
+
+#td-p3 {
+    background-color: #00A848;
+    border-color: #06960D
+}
+
+#td-p2>.panel-heading {
+    background-image: linear-gradient(to bottom,  #45B149 0, #06960D 100%)!important;
+    border-color: #06A10E !important;
+}
+
+#td-p2 {
+    background-color: #34BA6C;
+    border-color: #06960D;
+}
+
+#td-p1>.panel-heading {
+    background-image: linear-gradient(to bottom,  #5ABA5D 0, #06960D 100%)!important;
+    border-color: #06A10E !important;
+}
+
+#td-p1 {
+    background-color: #68CC90;
+    border-color: #06960D;
+}
+
+
+/**/
+
+#td-n0>.panel-heading {
+    background-image: linear-gradient(to bottom, #BAB6B6 0, #969292 100%) !important;
+    border-color: #969292 !important;
+}
+
+#td-n0 {
+    background-color: #BAB9B9;
+    border-color: #969292
+}
 
 .panel-info>.disagree_panel_heading {
     background-image: linear-gradient(to bottom, #ff4242 0, #e82a2a 100%)!important;
@@ -143,12 +229,12 @@ cardRatingJustitication  {
 }
 
 .panel-info>.neutral_panel_heading {
-    background-image: linear-gradient(to bottom, #A39E9E 0, #969292 100%) !important;
+    background-image: linear-gradient(to bottom, #BAB6B6 0, #969292 100%) !important;
     border-color: #969292 !important;
 }
 
 .panel-info>.agree_panel_heading {
-    background-image: linear-gradient(to bottom, #06A10E 0, #06960D 100%) !important;
+    background-image: linear-gradient(to bottom, #30A835 0, #06960D 100%) !important;
     border-color: #06A10E !important;
 }
 
@@ -171,4 +257,9 @@ cardRatingJustitication  {
     color: white !important;
 }
 
+/*Fix tooltip text*/
+tooltip tip {
+    text-align: left !important;
+    min-width: 300px !important;
+}
 
